--- a/test/test.html
+++ b/test/test.html
@@ -8,6 +8,8 @@
 
     <p id="die" onclick="myFunction()">Click me or else!</p>
     
+    <div oncontextmenu="myFunction()" contextmenu="mymenu">
+
     <script>
 
 function myFunction() {
