--- a/index.html
+++ b/index.html
@@ -3,5 +3,8 @@
 <title> WIP </title>
 </head>
 <body>
-    <h1>We live</h1>
+    <ul>
+        <li><a href="test.html">test page 1</a></li>
+
+    </ul>
 </body>
