--- a/index.html
+++ b/index.html
@@ -1,10 +1,29 @@
 <!DOCTYPE html>
 <head>
-<title> WIP </title>
+<title> Index </title>
+
+<style> 
+    ul {
+      list-style: none;      /*removes the default bullet*/
+      padding-left: 1.2em;   /*sets the list text to the right*/
+      text-indent: -1.2em;   /*indents the list text*/
+  }
+    li:before {                /*puts the Unicode before the text*/
+      content: "\1F98E";      /*designate the Unicode character's number*/
+      font-size: large;       /*control the bullet size*/
+      color: #d9534f;         /*control the symbol color*/
+      margin-right: .5em;     /*give a small margin to the Unicode*/
+  }
+   li {
+      padding: .2em;          /*space between the Unicode and the text*/
+  }
+  </style> 
+
 </head>
 <body>
+    <p>Pages</p>
     <ul>
-        <li><a href="test.html">test page 1</a></li>
-
+        <li><a href="test/test.html">test page 1</a></li>
     </ul>
+
 </body>
