--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 </head>
 <body>
-    <p>Pages</p>
+    <h2>Pages</h2>
     <ul>
         <li><a href="test/test.html">test page 1</a></li>
     </ul>
