--- a/test/test.html
+++ b/test/test.html
@@ -27,3 +27,7 @@ function keydown() {
 <br>
 
 <a href="test.html">test page 1</a>
+
+<br>
+
+<a href="../index.html">please oh god let me out pl</a>
