--- a/test/lizard.html
+++ b/test/lizard.html
@@ -4,4 +4,11 @@
 </head>
 <body>
     <div style="font-size:99rem;width:900%;">🦎</div>
+
+    <script>
+        function getIP(json) {
+      
+          document.write("<span class='ip'>" + json.ip);
+        }
+        </script>
 </body>
