--- a/test/test.html
+++ b/test/test.html
@@ -22,6 +22,16 @@ function keydown() {
   document.getElementById("keydown").style.backgroundColor = "red";
 }
     </script>
+
+
+<script>
+    function getIP(json) {
+  
+      document.write("<span class='ip'>" + json.ip);
+    }
+    </script>
+
+
 </body>
 
 <br>
