--- a/test/sus.html
+++ b/test/sus.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <title>run</title> 
-
+<div style="background-image: url('https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.polygon.com%2F2021%2F3%2F31%2F22350277%2Fnintendo-super-mario-3d-all-stars-march-31-death-35th-anniversary&psig=AOvVaw2nB1H2a5QV8-orcxMKf8yx&ust=1640054784376000&source=images&cd=vfe&ved=0CAsQjRxqFwoTCPjApamu8fQCFQAAAAAdAAAAABAD');"></div>
 <script src= 
 "https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"> 
 	</script> 
@@ -20,8 +20,5 @@
 
 </head>
 <body>
-    <div style="font-size:99rem;width:0%;">🦎</div>
+
 </body>
-
-
-<div style="background-image: url('img_girl.jpg');">
