--- a/test/sus.html
+++ b/test/sus.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <head>
 <title>run</title> 
-<div style="background-image: url('https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.polygon.com%2F2021%2F3%2F31%2F22350277%2Fnintendo-super-mario-3d-all-stars-march-31-death-35th-anniversary&psig=AOvVaw2nB1H2a5QV8-orcxMKf8yx&ust=1640054784376000&source=images&cd=vfe&ved=0CAsQjRxqFwoTCPjApamu8fQCFQAAAAAdAAAAABAD');"></div>
+<style>
+    body {
+        background-image: url('https://cdn.vox-cdn.com/thumbor/Y4WKd5g-roKr1_lO-cUT-yTG3fM=/0x0:1280x720/1200x800/filters:focal(492x239:696x443)/cdn.vox-cdn.com/uploads/chorus_image/image/69054680/nintendo_direct_mario.0.0.0.0.jpg');
+    }
+</style>
 <script src= 
 "https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"> 
 	</script> 
@@ -20,5 +24,5 @@
 
 </head>
 <body>
-
+    <h1 id="userip"></h2> 
 </body>
