where are you go?

--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
 <body>
     <h2>Pages</h2>
     <ul>
-        <li><a href="test/test.html">test page 1</a></li>
+        <li><a href="Neos/userlookup.html">User lookup</a></li>
+        <li><a href="credits.html">Site credits</a></li>
     </ul>
 
 </body>
