--- a/Neos/userlookup.html
+++ b/Neos/userlookup.html
@@ -1,4 +1,31 @@
 <!DOCTYPE html>
 <head>
 <title>In Neos</title>
+
+<style>
+    body {
+      background-image: url('https://i.imgur.com/6VlO9wJ.jpg');
+      background-repeat: no-repeat;
+      background-attachment: fixed;
+      background-size: cover;
+    }
+
+    #demobox {
+  background-color: rgba(0, 0, 0, 0.534) ;
+  padding: 40px ;
+  border: 0px solid rgb(0, 0, 0) ;
+  color: white;
+  font-family:helvetica;
+}
+    </style>
+
+<header class="page-header">
+    <a href="../index.html"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/55/Neos_VR_Logo.png/1018px-Neos_VR_Logo.png" alt="HTML tutorial" style="width:50px;height:50px;"></a>
+</header>
+
 </head>
+<body>
+    <div id="demobox">
+        There will be stuff here
+        </div>
+</body>
