--- a/Neos/userlookup.html
+++ b/Neos/userlookup.html
@@ -10,13 +10,20 @@
       background-size: cover;
     }
 
-    #demobox {
-  background-color: rgba(0, 0, 0, 0.534) ;
-  padding: 40px ;
+    #mainbox {
+  background-color: rgba(0, 0, 0, 0.664) ;
+  padding: 30px ;
   border: 0px solid rgb(0, 0, 0) ;
   color: white;
   font-family:helvetica;
+  text-align: center;
+  width: 900px;
+  margin: 0 auto;
+
 }
+
+
+
     </style>
 
 <header class="page-header">
@@ -24,8 +31,30 @@
 </header>
 
 </head>
+
 <body>
-    <div id="demobox">
+    <div class="container">
+    <!--Center Box-->
+    <div id="mainbox">
         There will be stuff here
         </div>
+    </div>
+
+<script>
+fetch("https://www.neosvr-api.com/api/users/U-alizard", {
+  "method": "GET",
+  "headers": {
+    "Content-Type": "application/json"
+  }
+})
+.then(response => {
+  console.log(response);
+  console.log("POG");
+})
+.catch(err => {
+  console.error(err);
+  console.error("get fucked");
+});
+</script>
+
 </body>
