--- a/Neos/userlookup.html
+++ b/Neos/userlookup.html
@@ -40,6 +40,10 @@
         </div>
     </div>
 
+
+
+<!--
+    test 1
 <script>
 fetch("https://www.neosvr-api.com/api/users/U-alizard", {
   "method": "GET",
@@ -56,5 +60,6 @@ fetch("https://www.neosvr-api.com/api/users/U-alizard", {
   console.error("get fucked");
 });
 </script>
+-->
 
 </body>
