--- a/Neos/userlookup.html
+++ b/Neos/userlookup.html
@@ -39,11 +39,27 @@
         There will be stuff here
         </div>
     </div>
+<!--
+<script>
+fetch('https://api.neos.com/api/users')
+    .then(res => {res.json
+    if (res.ok) {
+       console.log('SUCCESS') 
+    } else {
+        console.log('couldnt get data, epic fail')
+    }
+    })
+    .then(data => console.log(data))
+    .catch(error => console.log('error code: get fucked!'))
+
+</script>
+-->
 
 
 <script>
-    fetch("https://www.neosvr-api.com/api/users/U-alizard", {
+    fetch("https://api.neos.com/api/users/U-alizard", {
   "method": "GET",
+  "mode": 'no-cors',
   "headers": {
     "Content-Type": "application/json"
   }
@@ -57,5 +73,7 @@
   console.error("error code: get fucked");
 });
 </script>
+
+
 
 </body>
