--- a/Neos/userlookup.html
+++ b/Neos/userlookup.html
@@ -40,7 +40,24 @@
         </div>
     </div>
 
+<script>
+async function fetchTest() {
+    let response = await fetch('https://www.neosvr-api.com/api/users/U-alizard', {
+        "mode": 'no-cors'
+    });
+    let responseText = await response.text();
+    console.log(response.text)
 
+    document.getElementById('result').innerHTML = responseText;
+}
+
+(async() => {
+    await fetchTest();
+})();
+</script>
+
+<div id="result"></div>
+<!--
 <script>
 
     fetch("https://api.neos.com/api/users/U-alizard?format=json", {
@@ -54,12 +71,16 @@
 .then(response => {
   console.log(response);
   console.log("pog it loaded");
+  response.text().then(function (text) {
+  console.log("it's " + text)
+});
 })
 .catch(err => {
   console.error(err);
   console.error("error code: get fucked");
 });
 </script>
+-->
 
 
 </body>
