--- a/Neos/userlookup.html
+++ b/Neos/userlookup.html
@@ -41,10 +41,18 @@
     </div>
 
 <div id="result"></div>
+
+
+
+<p id="demo"></p>
+
+
+
+
 <!--
 <script>
 
-    fetch("https://api.neos.com/api/users/U-alizard?format=json", {
+   var request = fetch("https://api.neos.com/api/users/U-alizard?format=json", {
   "method": "GET",
   "mode": 'no-cors',
   "headers": {
@@ -52,17 +60,19 @@
   },
 
 })
-.then(response => {
+
+request.then(response => {
   console.log(response);
   console.log("pog it loaded");
   response.text().then(function (text) {
   console.log("it's " + text)
 });
 })
-.catch(err => {
+request.catch(err => {
   console.error(err);
   console.error("error code: get fucked");
 });
+
 </script>
 -->
 
