--- a/Neos/userlookup.html
+++ b/Neos/userlookup.html
@@ -30,6 +30,8 @@
     <a href="../index.html"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/55/Neos_VR_Logo.png/1018px-Neos_VR_Logo.png" alt="HTML tutorial" style="width:50px;height:50px;"></a>
 </header>
 
+<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+
 </head>
 
 <body>
@@ -40,33 +42,36 @@
         </div>
     </div>
 
-<div id="result"></div>
-
-
-
-<p id="demo"></p>
-
-
-
 
 <!--
 <script>
+const root = 'https://api.neos.com/api/'
+const uri = root + '/users/' + 'U-alizard'
 
-   var request = fetch("https://api.neos.com/api/users/U-alizard?format=json", {
+fetch(uri).then(function (response) {
+  return response.text()
+}).then(function (data) {
+  document.body.textContent = data
+}).catch(console.error)
+
+</script>
+-->
+    
+
+<script>
+
+   var request = fetch("https://api.neos.com/api/users/U-alizard", {
   "method": "GET",
   "mode": 'no-cors',
   "headers": {
-    "Content-Type": "application/json"
+    "Content-Type": "text/plain"
   },
 
 })
 
 request.then(response => {
-  console.log(response);
+  console.log(response)
   console.log("pog it loaded");
-  response.text().then(function (text) {
-  console.log("it's " + text)
-});
 })
 request.catch(err => {
   console.error(err);
@@ -74,7 +79,7 @@ request.catch(err => {
 });
 
 </script>
--->
+
 
 
 </body>
