--- a/Neos/userlookup.html
+++ b/Neos/userlookup.html
@@ -57,12 +57,12 @@ fetch(uri).then(function (response) {
 </script>
 -->
     
-
+<!--
 <script>
 
    var request = fetch("https://api.neos.com/api/users/U-alizard", {
   "method": "GET",
-  "mode": 'no-cors',
+  "mode": 'CORS',
   "headers": {
     "Content-Type": "text/plain"
   },
@@ -79,7 +79,7 @@ request.catch(err => {
 });
 
 </script>
-
+-->
 
 
 </body>
