--- a/Neos/userlookup.html
+++ b/Neos/userlookup.html
@@ -43,6 +43,8 @@
     </div>
 
 
+
+
 <!--
 <script>
 const root = 'https://api.neos.com/api/'
@@ -60,9 +62,9 @@ fetch(uri).then(function (response) {
 <!--
 <script>
 
-   var request = fetch("https://api.neos.com/api/users/U-alizard", {
+   var request = fetch("http://api.neos.com/api/users/U-alizard", {
   "method": "GET",
-  "mode": 'CORS',
+  "mode": 'no-cors',
   "headers": {
     "Content-Type": "text/plain"
   },
