--- a/Neos/userlookup.html
+++ b/Neos/userlookup.html
@@ -42,6 +42,25 @@
         </div>
     </div>
 
+<script>
+
+fetch('https://www.neosvr-api.com/api/users/U-alizard', {
+  "method": "GET",
+  "mode": 'no-cors',
+  "headers": {
+    "Content-Type": "text/plain"
+  }}).then(function (response) {
+	// The API call was successful!
+	return response.text();
+}).then(function (html) {
+	// This is the HTML from our response as a text string
+	console.log(html);
+}).catch(function (err) {
+	// There was an error
+	console.warn('Something went wrong.', err);
+});
+
+</script>
 
 
 
