--- a/Neos/userlookup.html
+++ b/Neos/userlookup.html
@@ -32,6 +32,21 @@
 
 <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 
+<script>
+var baseurl = "https://api.neos.com/api/users";
+function loadPersons(){
+  var xmlhttp = new XMLHttpRequest();
+  xmlhttp.open("GET", baseurl + "/U-alizard", true);
+  xmlhttp.onreadystatechange = function() {
+    if (xmlhttp.readyState === 4 && xmlhttp.status===200){
+      var persons = JSONparse(xmlhttp.responseText);
+      
+    }
+  }
+}
+
+</script>
+
 </head>
 
 <body>
@@ -42,42 +57,8 @@
         </div>
     </div>
 
-<script>
+<div id="fuck"></div>
 
-fetch('https://www.neosvr-api.com/api/users/U-alizard', {
-  "method": "GET",
-  "mode": 'no-cors',
-  "headers": {
-    "Content-Type": "text/plain"
-  }}).then(function (response) {
-	// The API call was successful!
-	return response.text();
-}).then(function (html) {
-	// This is the HTML from our response as a text string
-	console.log(html);
-}).catch(function (err) {
-	// There was an error
-	console.warn('Something went wrong.', err);
-});
-
-</script>
-
-
-
-<!--
-<script>
-const root = 'https://api.neos.com/api/'
-const uri = root + '/users/' + 'U-alizard'
-
-fetch(uri).then(function (response) {
-  return response.text()
-}).then(function (data) {
-  document.body.textContent = data
-}).catch(console.error)
-
-</script>
--->
-    
 <!--
 <script>
 
