--- a/Neos/userlookup.html
+++ b/Neos/userlookup.html
@@ -48,7 +48,7 @@
 
 <!--
 <script>
-
+  
    var request = fetch("http://api.neos.com/api/users/U-alizard", {
   "method": "GET",
   "mode": 'no-cors',
@@ -69,6 +69,32 @@ request.catch(err => {
 
 </script>
 -->
+
+<div id="id01"></div>
+
+<script>
+var xmlhttp = new XMLHttpRequest();
+var url = "http://api.neos.com/api/users/U-alizard";
+
+xmlhttp.onreadystatechange = function() {
+    if (this.readyState == 4 && this.status == 200) {
+        var myArr = JSON.parse(this.responseText);
+        myFunction(myArr);
+    }
+};
+xmlhttp.open("GET", url, true, );
+xmlhttp.send();
+
+function myFunction(arr) {
+    var out = "";
+    var i;
+    for(i = 0; i < arr.length; i++) {
+        out += '<a href="' + arr[i].url + '">' +
+        arr[i].display + '</a><br>';
+    }
+    document.getElementById("id01").innerHTML = out;
+}
+</script>
 
 
 </body>
