--- a/Neos/dbDownloader.html
+++ b/Neos/dbDownloader.html
@@ -14,7 +14,7 @@
       background-color: rgba(0, 0, 0, 0.664) ;
       padding: 30px ;
       border: 0px solid rgb(0, 0, 0) ;
-      color: white;
+      color: rgb(255, 230, 0);
       font-family:helvetica;
       text-align: center;
       width: 900px;
@@ -41,6 +41,7 @@
                 <input type="submit" onclick="othername();" />
             </form>
             </div>
+            <br>
         </div>
     
     <div id="fuck"></div>
