--- a/Neos.html
+++ b/Neos.html
@@ -21,7 +21,7 @@
 
 </head>
 <body>
-    <h2>Pages</h2>
+    <h2>Neos related items</h2>
     <ul>
         <li><a href="Neos/dbDownloader.html">dbDownloader</a></li>
     </ul>
