--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body>
     <h2>Pages</h2>
     <ul>
-        <li><a href="Neos/userlookup.html">User lookup</a></li>
+        <li><a href="Neos.html">Neos stuff</a></li>
         <li><a href="credits.html">Site credits</a></li>
     </ul>
 
