--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 </head>
 <body>
-    <h2>Pages</h2>
+    <h2>Main Index</h2>
     <ul>
         <li><a href="Neos.html">Neos stuff</a></li>
         <li><a href="credits.html">Site credits</a></li>
