--- a/Neos/dbDownloader.html
+++ b/Neos/dbDownloader.html
@@ -25,7 +25,7 @@
         </style>
     
     <header class="page-header">
-        <a href="../index.html"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/55/Neos_VR_Logo.png/1018px-Neos_VR_Logo.png" alt="HTML tutorial" style="width:50px;height:50px;"></a>
+        <a href="../Neos.html"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/55/Neos_VR_Logo.png/1018px-Neos_VR_Logo.png" alt="HTML tutorial" style="width:50px;height:50px;"></a>
     </header>
 </head>
 
