--- a/credits.html
+++ b/credits.html
@@ -1,8 +1,15 @@
 <!DOCTYPE html>
 <head>
 <title>Credits</title>
+
+<style>
+    p {font-size: large;}
+  </style>
+
 </head>
 <body>
     <h1>Site credits</h1>
-    <P>maintainer => alizard</P>
+    <div contenteditable>
+     <p><span style="color: brown">maintainer </span><span style="color: purple">:</span><span style="color: blue"> alizard</span><p>
+    </div>
 </body>
