why could you edit that
good question me

--- a/credits.html
+++ b/credits.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>Site credits</h1>
-    <div contenteditable>
+    <div>
      <p><span style="color: brown">maintainer </span><span style="color: purple">:</span><span style="color: blue"> alizard</span><p>
     </div>
 </body>
