--- a/Home.html
+++ b/Home.html
@@ -1,7 +1,36 @@
 <!DOCTYPE html>
 <head>
+<!--Meta-->    
 <title>Home</title>
-</head>
-<body>
+<!--Styles-->
+<style>
+    body {
+      background-image: url('https://i.imgur.com/MThPYi3.jpg');
+      background-repeat: no-repeat;
+      background-attachment: fixed;
+      background-size: cover;
+    }
 
+    #mainbox {
+  background-color: rgba(0, 0, 0, 0.664) ;
+  padding: 30px ;
+  border: 0px solid rgb(0, 0, 0) ;
+  color: white;
+  font-family:helvetica;
+  text-align: center;
+  width: 900px;
+  margin: 0 auto;
+    }
+    </style>
+</head>
+
+<body>
+    <div class="container">
+        <!--Center Box-->
+        <div id="mainbox">
+            <h1>Rep-tiled Directory</h1>
+
+            </div>
+        </div>   
 </body>
+
