--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 <body>
     <h2>Main Index</h2>
     <ul>
+        <li><a href="Home.html">Home</a></li>
         <li><a href="Neos.html">Neos stuff</a></li>
         <li><a href="credits.html">Site credits</a></li>
     </ul>
