swapped the index
we are a real site now

--- a/index.html
+++ b/index.html
@@ -1,31 +1,36 @@
 <!DOCTYPE html>
 <head>
-<title> Index </title>
+<!--Meta-->    
+<title>Home</title>
+<!--Styles-->
+<style>
+    body {
+      background-image: url('https://i.imgur.com/MThPYi3.jpg');
+      background-repeat: no-repeat;
+      background-attachment: fixed;
+      background-size: cover;
+    }
 
-<style> 
-    ul {
-      list-style: none;      /*removes the default bullet*/
-      padding-left: 1.2em;   /*sets the list text to the right*/
-      text-indent: -1.2em;   /*indents the list text*/
-  }
-    li:before {                /*puts the Unicode before the text*/
-      content: "\1F98E";      /*designate the Unicode character's number*/
-      font-size: large;       /*control the bullet size*/
-      color: #d9534f;         /*control the symbol color*/
-      margin-right: .5em;     /*give a small margin to the Unicode*/
-  }
-   li {
-      padding: .2em;          /*space between the Unicode and the text*/
-  }
-  </style> 
-
+    #mainbox {
+  background-color: rgba(0, 0, 0, 0.664) ;
+  padding: 30px ;
+  border: 0px solid rgb(0, 0, 0) ;
+  color: white;
+  font-family:helvetica;
+  text-align: center;
+  width: 900px;
+  margin: 0 auto;
+    }
+    </style>
 </head>
-<body>
-    <h2>Main Index</h2>
-    <ul>
-        <li><a href="Home.html">Home</a></li>
-        <li><a href="Neos.html">Neos stuff</a></li>
-        <li><a href="credits.html">Site credits</a></li>
-    </ul>
 
+<body>
+    <div class="container">
+        <!--Center Box-->
+        <div id="mainbox">
+            <h1>Rep-tiled Directory</h1>
+
+            </div>
+        </div>   
 </body>
+
