--- a/Neos.html
+++ b/Neos.html
@@ -23,7 +23,7 @@
 <body>
     <h2>Neos related items</h2>
     <ul>
-        <li><a href="./index.html">back</a></li>
+        <li><a href="./directory.html">back</a></li>
         <li><a href="Neos/dbDownloader.html">dbDownloader</a></li>
     </ul>
 
