you can no longer get trapped
credits.html is no longer a dead end!

--- a/credits.html
+++ b/credits.html
@@ -12,4 +12,5 @@
     <div>
      <p><span style="color: brown">maintainer </span><span style="color: purple">:</span><span style="color: blue"> alizard</span><p>
     </div>
+    <a href="./directory.html">back</a>
 </body>
