--- a/index.html
+++ b/index.html
@@ -21,6 +21,15 @@
   width: 900px;
   margin: 0 auto;
     }
+
+    a { color:white } /* Globally */
+
+/* Each state */
+
+a:visited { text-decoration: none; color:white; }
+a:hover { text-decoration: none; color:white; }
+a:focus { text-decoration: none; color:white; }
+a:hover, a:active { text-decoration: none; color:white }
     </style>
 </head>
 
@@ -28,8 +37,8 @@
     <div class="container">
         <!--Center Box-->
         <div id="mainbox">
-            <h1>Rep-tiled Directory</h1>
-
+            <h1>Rep-tiled</h1>
+            <h2><a href="./directory.html">Directory</a></h2>
             </div>
         </div>   
 </body>
