--- a/Neos.html
+++ b/Neos.html
@@ -25,6 +25,8 @@
     <ul>
         <li><a href="./directory.html">back</a></li>
         <li><a href="Neos/dbDownloader.html">dbDownloader</a></li>
+        <li><a href="https://alizardguy.github.io/rep-tiledNWIP.html">In progress...</a></li>
     </ul>
+
 
 </body>
