--- a/credits.html
+++ b/credits.html
@@ -11,6 +11,7 @@
     <h1>Site credits</h1>
     <div>
      <p><span style="color: brown">maintainer </span><span style="color: purple">:</span><span style="color: blue"> alizard</span><p>
+     <p><span style="color: brown">neos screenshots </span><span style="color: purple">:</span><span style="color: blue"> neos team</span><p>
     </div>
     <a href="./directory.html">back</a>
 </body>
