--- a/credits.html
+++ b/credits.html
@@ -1,17 +1,21 @@
 <!DOCTYPE html>
 <head>
 <title>Credits</title>
-
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
     p {font-size: large;}
   </style>
 
 </head>
 <body>
-    <h1>Site credits</h1>
+    <div class="container-fluid">
+        <div class="row">
+            <h1>Site credits</h1>
     <div>
      <p><span style="color: brown">maintainer </span><span style="color: purple">:</span><span style="color: blue"> alizard</span><p>
      <p><span style="color: brown">neos screenshots </span><span style="color: purple">:</span><span style="color: blue"> neos team</span><p>
     </div>
     <a href="./directory.html">back</a>
+          </div>
+        </div>
 </body>
