--- a/directory.html
+++ b/directory.html
@@ -3,13 +3,17 @@
 <title> Index </title>
 
 <link rel="stylesheet" href="style/list.css">
-
+<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-    <h2>Main Index</h2>
-    <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="Neos.html">Neos stuff</a></li>
-        <li><a href="credits.html">Site credits</a></li>
-    </ul>
+    <div class="container-fluid">
+      <div class="row">
+        <h2>Main Index</h2>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="Neos.html">Neos stuff</a></li>
+            <li><a href="credits.html">Site credits</a></li>
+        </ul>
+        </div>
+      </div>
 </body>
