--- a/Neos.html
+++ b/Neos.html
@@ -2,31 +2,18 @@
 <head>
 <title> Neos Stuff </title>
 
-<style> 
-    ul {
-      list-style: none;      /*removes the default bullet*/
-      padding-left: 1.2em;   /*sets the list text to the right*/
-      text-indent: -1.2em;   /*indents the list text*/
-  }
-    li:before {                /*puts the Unicode before the text*/
-      content: "\1F98E";      /*designate the Unicode character's number*/
-      font-size: large;       /*control the bullet size*/
-      color: #d9534f;         /*control the symbol color*/
-      margin-right: .5em;     /*give a small margin to the Unicode*/
-  }
-   li {
-      padding: .2em;          /*space between the Unicode and the text*/
-  }
-  </style> 
-
+<link rel="stylesheet" href="style/list.css">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-    <h2>Neos related items</h2>
-    <ul>
+    <div class="container-fluid">
+        <div class="row">
+            <h2>Neos related items</h2>
+        <ul>
         <li><a href="./directory.html">back</a></li>
         <li><a href="Neos/dbDownloader.html">dbDownloader</a></li>
         <li><a href="https://alizardguy.github.io/rep-tiledNWIP.html">In progress...</a></li>
-    </ul>
-
-
+        </ul>
+          </div>
+        </div>
 </body>
