added alizard page
also slowly adding links to the credits page

--- a/alizard.html
+++ b/alizard.html
@@ -38,7 +38,8 @@ a:hover, a:active { text-decoration: none; color:white }
         <!--Center Box-->
         <div id="mainbox">
             <h1>about alizard</h1>
-            <p>API info will go here soon...</p>
+            <h3><a href="https://github.com/alizardguy">github page</a></h3>
+            <h3><a href="https://www.youtube.com/alizardguy">youtube</a></h3>
             </div>
         </div>
 </body>
