--- a/credits.html
+++ b/credits.html
@@ -12,10 +12,11 @@
         <div class="row">
             <h1>Site credits</h1>
     <div>
-     <p><span style="color: brown">maintainer </span><span style="color: purple">:</span><span style="color: blue"> alizard</span><p>
+     <p><span style="color: brown">maintainer </span><span style="color: purple">:</span><span style="color: blue"> <a href="./alizard.html">alizard</a></h3></span><p>
      <p><span style="color: brown">neos screenshots </span><span style="color: purple">:</span><span style="color: blue"> neos team</span><p>
     </div>
     <a href="./directory.html">back</a>
           </div>
         </div>
 </body>
+
