--- a/felixLayout.html
+++ b/felixLayout.html
@@ -1,10 +1,20 @@
 <!DOCTYPE html>
+<!--head-->
 <head>
 <!--meta-->
 <link rel="stylesheet" href="style/felix.css">
 <title>Felix layout</title>
+<!--background image-->
+<style>
+    body {
+      background-image: url('https://i.imgur.com/MThPYi3.jpg');
+      background-repeat: no-repeat;
+      background-attachment: fixed;
+      background-size: cover;
+    }
+</style>
 </head>
-
+<!--body-->
 <body>
 
 </body>
