--- a/felixLayout.html
+++ b/felixLayout.html
@@ -4,6 +4,7 @@
 <!--meta-->
 <link rel="stylesheet" href="style/felix.css">
 <title>Felix layout</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <!--background image-->
 <style>
     body {
@@ -16,5 +17,7 @@
 </head>
 <!--body-->
 <body>
-
+    <div class="boxBack">
+        <h1>Felix Layout</h1>
+    </div>
 </body>
