--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
+<!--head-->
 <head>
-<!--Meta-->    
-<title>Home</title>
-<!--Styles-->
+<!--meta-->
+<link rel="stylesheet" href="style/felix.css">
+<title>Felix layout</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<!--background image-->
 <style>
     body {
       background-image: url('https://i.imgur.com/MThPYi3.jpg');
@@ -10,35 +13,12 @@
       background-attachment: fixed;
       background-size: cover;
     }
-
-    #mainbox {
-  background-color: rgba(0, 0, 0, 0.664) ;
-  padding: 30px ;
-  border: 0px solid rgb(0, 0, 0) ;
-  color: white;
-  font-family:helvetica;
-  text-align: center;
-  width: 900px;
-  margin: 0 auto;
-    }
-
-    a { color:white } /* Globally */
-
-/* Each state */
-
-a:visited { text-decoration: none; color:white; }
-a:hover { text-decoration: none; color:white; }
-a:focus { text-decoration: none; color:white; }
-a:hover, a:active { text-decoration: none; color:white }
-    </style>
+</style>
 </head>
-
+<!--body-->
 <body>
-    <div class="container">
-        <!--Center Box-->
-        <div id="mainbox">
-            <h1>Rep-tiled</h1>
-            <h2><a href="./directory.html">Directory</a></h2>
-            </div>
-        </div>   
+    <div class="boxBack">
+      <h1>Rep-tiled</h1>
+      <h2><a href="./directory.html">Directory</a></h2>
+    </div>
 </body>
