--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <!--head-->
 <head>
 <!--meta-->
+<title>Home</title>
 <link rel="stylesheet" href="style/felix.css">
-<title>Felix layout</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <!--background image-->
 <style>
