--- a/directory.html
+++ b/directory.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-<title> Index </title>
+<title> Directory </title>
 
 <link rel="stylesheet" href="style/list.css">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -8,7 +8,7 @@
 <body>
     <div class="container-fluid">
       <div class="row">
-        <h2>Main Index</h2>
+        <h2>Light Directory</h2>
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="Neos.html">Neos stuff</a></li>
