--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 <body>
     <div class="boxBack">
       <h1>Rep-tiled</h1>
-      <h2><a href="./directory.html">Directory</a></h2>
+      <h2><a href="./directory/blocks.html">Directory</a></h2>
+      <h2><a href="./directory.html">Old Directory</a></h2>
     </div>
 </body>
