--- a/directory/blocks.html
+++ b/directory/blocks.html
@@ -7,7 +7,8 @@
 </head>
 
 <body>
-
+<!--Grid-->
+<main>
 <div class ="photo-grid">
     <!--Button-->
     <div class = "card" style="background-image: url('https://i.imgur.com/MThPYi3.jpg');">
@@ -27,5 +28,6 @@
     </div>
     
 </div>
+</main>
 
 </body>
