--- a/credits.html
+++ b/credits.html
@@ -13,9 +13,9 @@
             <h1>Site credits</h1>
     <div>
      <p><span style="color: brown">maintainer </span><span style="color: purple">:</span><span style="color: blue"> <a href="./alizard.html">alizard</a></h3></span><p>
-     <p><span style="color: brown">neos screenshots </span><span style="color: purple">:</span><span style="color: blue"> neos team</span><p>
+     <p><span style="color: brown">backgrounds </span><span style="color: purple">:</span><span style="color: blue"> taken in Neos VR</span><p>
     </div>
-    <a href="./directory.html">back</a>
+    <a href="./index.html">back</a>
           </div>
         </div>
 </body>
