--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
     <div class="boxBack">
       <h1>Rep-tiled</h1>
       <h2><a href="./directory/blocks.html">Directory</a></h2>
-      <h2><a href="./directory.html">Old Directory</a></h2>
+      <h2><a href="./credits.html">Credit</a></h2>
     </div>
 </body>
