weird crop fixed
now it's not just green

--- a/directory/blocks.html
+++ b/directory/blocks.html
@@ -11,7 +11,7 @@
 <main>
 <div class ="photo-grid">
     <!--Button-->
-    <div class = "card" style="background-image: url('https://i.imgur.com/MThPYi3.jpg');">
+    <div class = "card" style="background-image: url('https://i.imgur.com/Laie3Ou.png');">
         <a href="../index.html">
         <div class="middlePart">
             <h1>Home</h1>
