--- a/directory/indev.html
+++ b/directory/indev.html
@@ -7,35 +7,31 @@
 </head>
 
 <body>
+
 <!--Grid-->
 <main>
 <div class ="photo-grid">
     <!--Button-->
     <div class = "card" style="background-image: url('https://i.imgur.com/Laie3Ou.png');">
-        <a href="../index.html">
+        <a href="./blocks.html">
         <div class="middlePart">
-            <h1>Home</h1>
+            <h1>Back</h1>
         </div>
         </a>
     </div>
     <!--Button-->
-    <div class = "card" style="background-image: url('https://i.imgur.com/6VlO9wJ.jpg');">
-        <a href="../Neos/dbDownloader.html">
+    <div class = "card" style="background-image: url('https://i.imgur.com/EgSAdk7.png');">
+        <a href="https://rep-tiled.tk/clicker/game">
         <div class="middlePart">
-            <h1>DB Downloader</h1>
+            <h1>Clicker</h1>
         </div>
         </a>
     </div>
-    <!--Button-->
-    <div class = "card" style="background-image: url('https://i.imgur.com/qzOgtTR.png');">
-        <a href="./indev.html">
-        <div class="middlePart">
-            <h1>Indev</h1>
-        </div>
-        </a>
-    </div>
+    
 
 </div>
 </main>
+
+<footer><h1>Games found here may be unfinished or broken</h1></footer>
 
 </body>
