--- a/directory/blocks.html
+++ b/directory/blocks.html
@@ -4,6 +4,7 @@
 
 <link rel="stylesheet" href="../style/itemGrid.css">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="icon" type="image/x-icon" href="../favicon.ico">
 </head>
 
 <body>
