--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <title>Home</title>
 <link rel="stylesheet" href="style/felix.css">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="icon" type="image/x-icon" href="./favicon.ico">
 <!--background image-->
 <style>
     body {
