--- a/directory/indev.html
+++ b/directory/indev.html
@@ -4,6 +4,7 @@
 
 <link rel="stylesheet" href="../style/itemGrid.css">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="icon" type="image/x-icon" href="https://i.imgur.com/Jk4T1zv.png">
 </head>
 
 <body>
