--- a/directory/indev.html
+++ b/directory/indev.html
@@ -33,6 +33,6 @@
 </div>
 </main>
 
-<footer><h1>Games found here may be unfinished or broken</h1></footer>
+<footer><h1>Note: games found here may be unfinished or broken</h1></footer>
 
 </body>
