--- a/gen/genTest.html
+++ b/gen/genTest.html
@@ -3,14 +3,10 @@
 <html>
 <head>
     <meta charset="utf-8" />
-
-
-    <script src="./canvas2image.js"></script>
 </head>
 <body>
-    <script type="text/javascript">
-        
-    </script>
+    <script src='./canvas2image.js'></script>
+
 
     <canvas id="myCanvas" width="400" height="100" style="border:1px solid #d3d3d3;">
         Your browser does not support the HTML5 canvas tag.</canvas>
