--- a/directory/indev.html
+++ b/directory/indev.html
@@ -22,7 +22,7 @@
     </div>
     <!--Button-->
     <div class = "card" style="background-image: url('https://i.imgur.com/EgSAdk7.png');">
-        <a href="https://rep-tiled.tk/clicker/game">
+        <a href="https://rep-tiled.tk/mainframe/game">
         <div class="middlePart">
             <h1>Clicker</h1>
         </div>
