--- a/directory/indev.html
+++ b/directory/indev.html
@@ -21,7 +21,7 @@
         </a>
     </div>
     <!--Button-->
-    <div class = "card" style="background-image: url('https://i.imgur.com/EgSAdk7.png');">
+    <div class = "mainframe" style="background-image: url('https://i.imgur.com/EgSAdk7.png');">
         <a href="https://rep-tiled.tk/mainframe/game">
         <div class="middlePart">
             <h1>Clicker</h1>
