--- a/directory/blocks.html
+++ b/directory/blocks.html
@@ -28,6 +28,15 @@
         </a>
     </div>
     <!--Button-->
+    <div class = "card" style="background-image: url('https://i.imgur.com/FwGKQCb.png');">
+        <a href="../what/aboutProfiles.html">
+        <div class="middlePart">
+            <h1>profile</h1>
+        </div>
+        </a>
+    </div>
+    <!--Button-->
+    <!--Button-->
     <div class = "card" style="background-image: url('https://i.imgur.com/qzOgtTR.png');">
         <a href="./indev.html">
         <div class="middlePart">
