--- a/what/aboutProfiles.html
+++ b/what/aboutProfiles.html
@@ -2,7 +2,7 @@
 <!--head-->
 <head>
 <!--meta-->
-<link rel="stylesheet" href="style/felix.css">
+<link rel="stylesheet" href="../style/felix.css">
 <title>profile standard</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <!--background image-->
