--- a/what/aboutProfiles.html
+++ b/what/aboutProfiles.html
@@ -19,8 +19,9 @@
 <body>
     <div class="boxBack">
         <h1>The profile standard</h1>
-        <h2>sorta like Geocities</h2>
-        <a href="https://rep-tiled.tk/profileView/">a viewer I made</a>
-        <a href="https://psychpsyo.tk/explanation.html">psych's page on the city</a>
+        
+        <h2><a href="https://rep-tiled.tk/profileView/">a viewer I made</a></h2>
+        
+        <h2><a href="https://psychpsyo.tk/explanation.html">psych's page on profiles</a></h2>
     </div>
 </body>
