--- a/Neos/dbDownloader.html
+++ b/Neos/dbDownloader.html
@@ -18,7 +18,7 @@
 <!--body-->
 <body>
     <header class="page-header">
-        <a href="../directory/blocks.html"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/55/Neos_VR_Logo.png/1018px-Neos_VR_Logo.png" alt="HTML tutorial" style="width:50px;height:50px;"></a>
+        <a href="../directory/blocks.html"><img src="blob:https://imgur.com/22fcce76-0914-4a05-8b87-2b1fb36214b3" alt="Neos logo" style="width:50px;height:50px;"></a>
     </header>
 
     <div class="boxBack">
