--- a/Neos/dbDownloader.html
+++ b/Neos/dbDownloader.html
@@ -18,7 +18,7 @@
 <!--body-->
 <body>
     <header class="page-header">
-        <a href="../directory/blocks.html"><img src="blob:https://imgur.com/22fcce76-0914-4a05-8b87-2b1fb36214b3" alt="Neos logo" style="width:50px;height:50px;"></a>
+        <a href="../directory/blocks.html"><img src="https://i.imgur.com/jPa5ckS.png" alt="Neos logo" style="width:50px;height:50px;"></a>
     </header>
 
     <div class="boxBack">
