--- a/anyland/index.html
+++ b/anyland/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <head>
     <title>anyland communication</title>
+    <link rel="stylesheet" href="./anydex.css">
 </head>
 <body>
+    <main>
     <h1>Anyland scripting JS test</h1>
+    </main>
 </body>
