--- a/anyland/index.html
+++ b/anyland/index.html
@@ -7,4 +7,13 @@
     <main>
     <h1>Anyland scripting JS test</h1>
     </main>
+
+    <script>
+        var json = '{"n":"cyan purple x","p":[{"b":3,"s":[{"p":[0.5,0,0],"r":[45,0,0],' +
+        '"s":[0.1,0.8,0.1],"c":[0,1,1]}]},{"b":3,"s":[{"p":[0.5,0,0],"r":[-45,0,0],' +
+        '"s":[0.1,0.8,0.1],"c":[1,0,1]}]}]}';
+
+AnylandSetThing(json);
+    </script>
+
 </body>
