--- a/directory/blocks.html
+++ b/directory/blocks.html
@@ -27,15 +27,16 @@
         </div>
         </a>
     </div>
+    
     <!--Button-->
-    <div class = "card" style="background-image: url('https://i.imgur.com/FwGKQCb.png');">
-        <a href="../what/aboutProfiles.html">
+    <div class = "card" style="background-image: url('https://i.imgur.com/g4J7d4m.png');">
+        <a href="https://rep-tiled.tk/profileView/DarkViewer/">
         <div class="middlePart">
-            <h1>profile</h1>
+            <h1>profile.json viewer</h1>
         </div>
         </a>
     </div>
-    <!--Button-->
+
     <!--Button-->
     <div class = "card" style="background-image: url('https://i.imgur.com/qzOgtTR.png');">
         <a href="./indev.html">
