--- a/directory/indev.html
+++ b/directory/indev.html
@@ -20,7 +20,14 @@
         </div>
         </a>
     </div>
-    
+    <!--Button-->
+    <div class = "card" style="background-image: url('https://i.imgur.com/FwGKQCb.png');">
+        <a href="../what/aboutProfiles.html">
+        <div class="middlePart">
+            <h1>profile</h1>
+        </div>
+        </a>
+    </div>
 
 </div>
 </main>
