--- a/felixLayout.html
+++ b/felixLayout.html
@@ -19,5 +19,6 @@
 <body>
     <div class="boxBack">
         <h1>Felix Layout</h1>
+        <img src="./getRealHQ.png" alt="profile photo">
     </div>
 </body>
