--- a/cards/tweeter.html
+++ b/cards/tweeter.html
@@ -1,3 +1,6 @@
+<!DOCTYPE html>
+<html>
+<head>
 <meta name="twitter:card" content="summary" />
 <meta name="twitter:site" content="@rep-tiled" />
 <meta name="twitter:creator" content="@alizardguy" />
@@ -5,3 +8,8 @@
 <meta property="og:title" content="Rep-tiled" />
 <meta property="og:description" content="We gaming" />
 <meta property="og:image" content="https://i.imgur.com/EgSAdk7.png" />
+</head>
+<body>
+    <h1>Twitter lol</h1>
+</body>
+</html>
