--- a/cards/tweeter.html
+++ b/cards/tweeter.html
@@ -8,6 +8,7 @@
 <meta property="og:title" content="Rep-tiled" />
 <meta property="og:description" content="We gaming" />
 <meta property="og:image" content="https://i.imgur.com/EgSAdk7.png" />
+<title>Rep-tiled card</title>
 </head>
 <body>
     <h1>Twitter lol</h1>
