meta for Twitter

--- a/what/aboutProfiles.html
+++ b/what/aboutProfiles.html
@@ -5,6 +5,13 @@
 <link rel="stylesheet" href="../style/felix.css">
 <title>profile standard</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<!--twitter card-->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:site" content="@reptiled">
+<meta name="twitter:creator" content="@alizard">
+<meta name="twitter:title" content="What are TK profiles?">
+<meta name="twitter:description" content="A breif description on what the JSON or 'tk profile' is.">
+<meta name="twitter:image" content="https://i.imgur.com/FwGKQCb.png">
 <!--background image-->
 <style>
     body {
