style sheet good

--- a/msearch/index.html
+++ b/msearch/index.html
@@ -3,8 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, inital-scale=1.0">
+    <link rel="stylesheet" href="./search.css">
+    <title>mega search</title>
 </head>
 <body>
-    <h1>New features? 0-0</h1>
+    <div class="search-wrapper">
+        <label for="search">Search rep-tiled</label>
+        <input type="search" id="search">
+    </div>
+
+    <div class="cards">
+        <div class ="card">
+            <div class="header">Name</div>
+            <div class="body">blurb</div>
+        </div>
+    </div>
 </body>
 </html>
