--- a/msearch/index.html
+++ b/msearch/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, inital-scale=1.0">
     <link rel="stylesheet" href="./search.css">
+    <script src="search.js" defer></script>
     <title>mega search</title>
 </head>
 <body>
@@ -13,6 +14,16 @@
     </div>
 
     <div class="cards">
+        <div class ="card">
+            <div class="header">Name</div>
+            <div class="body">blurb</div>
+        </div>
+
+        <div class ="card">
+            <div class="header">Name</div>
+            <div class="body">blurb</div>
+        </div>
+
         <div class ="card">
             <div class="header">Name</div>
             <div class="body">blurb</div>
