--- a/msearch/index.html
+++ b/msearch/index.html
@@ -13,21 +13,14 @@
         <input type="search" id="search">
     </div>
 
-    <div class="cards">
+    <div class="cards"></div>
+        
+    <!--card template-->
+    <template data-card-template>
         <div class ="card">
             <div class="header">Name</div>
             <div class="body">blurb</div>
         </div>
-
-        <div class ="card">
-            <div class="header">Name</div>
-            <div class="body">blurb</div>
-        </div>
-
-        <div class ="card">
-            <div class="header">Name</div>
-            <div class="body">blurb</div>
-        </div>
-    </div>
+    </template>
 </body>
 </html>
