better search and new data

--- a/msearch/index.html
+++ b/msearch/index.html
@@ -19,7 +19,7 @@
     <template data-card-template>
         <div class ="card">
             <div class="header" data-header></div>
-            <div class="body" data-body></div>
+            <a href="" class="body" data-body></div>
         </div>
     </template>
 </body>
